test/functions/diten/unary_uint64_param_minus_error.chpl
param x: uint(64) = 18446744073709551615; // max(uint(64))

var y: int(64) = -x;
writeln(y);
